# spark

./:  .gitattributes  .gitignore  CHANGELOG.md  README.md  biome.json  examples.html  index.html  lefthook.yml  mkdocs.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-dist.yml  ci-deploy-site.yml  ci-linux.yml  ci-windows.yaml  deploy-site.yml
docs/: .gitignore  forge-renderer.md  forge-viewpoint.md  getting-started.md  index.md  loading-splats.md  overview.md  packed-splats.md  procedural-splats.md  splat-mesh.md
docs/docs/: community-resources.md  controls.md  dyno-overview.md  dyno-stdlib.md  forge-renderer.md  forge-viewpoint.md  index.md  loading-splats.md  overview.md  packed-splats.md  performance.md  procedural-splats.md  spark-renderer.md  spark-viewpoint.md  splat-editing.md  splat-mesh.md  (+1 more)
examples/: assets.json  index.html
rust/: .gitignore  Cargo.toml  build_rust_wasm.ps1  build_rust_wasm.sh  build_wasm.js
rust/forge-internal-rs/: Cargo.toml  README.md
rust/forge-internal-rs/src/: lib.rs  raycast.rs  sort.rs
rust/spark-internal-rs/: Cargo.toml  README.md
rust/spark-internal-rs/src/: lib.rs  raycast.rs  sort.rs
rust/wlg/: Cargo.toml
rust/wlg/src/: lib.rs  ordering.rs
rust/wlg/src/wlg0/: decode.rs  encode.rs  mod.rs
scripts/: build-site.js  clean-assets.js  clean-site-files.js  clean-site.js  compress-to-spz.js  copy-site-files.js  deploy-site.js  download-assets.js  rename-assets-to-static.js  serve-site.js
src/: ForgeRenderer.ts  ForgeViewpoint.ts  PackedSplats.ts  Readback.ts  RgbaArray.ts  SparkRenderer.ts  SparkViewpoint.ts  SplatAccumulator.ts  SplatEdit.ts  SplatGenerator.ts  SplatGeometry.ts  SplatLoader.ts  SplatMesh.ts  SplatSkinning.ts  antisplat.ts  controls.ts  defines.ts  dyno.ts  generators.ts  hands.ts  index.ts  ksplat.ts  modifiers.ts  pcsogs.ts  ply.ts  shaders.ts  splatConstructors.ts  splatWorker.ts  spz.ts  utils.ts  vrButton.ts  worker.ts
test/: utils.test.ts
(+75 files in other folders)
