[workspace]
members = [
    "forge-internal-rs",
]
resolver = "2"

[workspace.package]
rust-version = "1.82"
edition = "2021"
license = "Proprietary"
authors = ["World Labs Technologies"]
repository = "https://github.com/forge-gfx/forge"

[workspace.dependencies]
anyhow = "1.0.98"
half = "2.6.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
