[package]
name = "spark-internal-rs"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
half.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
