[package]
name = "wlg"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
half.workspace = true
serde.workspace = true
ruzstd.workspace = true
